--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
     },
     "require-dev": {
         "spryker/code-sniffer": "^0.5.0",
-        "phpunit/phpunit": "^5.4",
-        "mikey179/vfsStream": "^1.6"
+        "phpunit/phpunit": "^5.4"
     }
 }
